# bitmamba.cpp

./: .gitignore  CMakeLists.txt  README.md  bit_mamba_torch_250m.py  bitmamba.cpp  decoder.py  export_bin.py  fast_inference.py  requirements.txt  tokenizer.h
examples/: main.cpp
include/bitmamba/: block.h  config.h  kernels.h  lora.h  model.h  quantization.h  tensor.h  utils.h
python/: README.md  client.py  requirements.txt  server.py  setup.sh  simple_server.py  test_simple.py
scripts/: brain_scanner.py  config.py  export_lora_bin.py  export_tokenizer.py  loader.py
src/: basic_utils.cpp  block.cpp  kernels.cpp  lora.cpp  model.cpp  monolithic_bitmamba.cpp  quantization.cpp
tests/: README.md  lib.sh  run_tests.sh  test_00_build.sh  test_01_help.sh  test_02_legacy_cli.sh  test_03_rys.sh  test_04_prefill_modes.sh  test_05_lora.sh  test_06_scripts.sh  test_07_server.sh  test_08_fastapi_server.sh
